Fix visibility issue of dropdowns in dashboard

--- a/saleor/static/dashboard/scss/components/_card-collapse.scss
+++ b/saleor/static/dashboard/scss/components/_card-collapse.scss
@@ -1,5 +1,4 @@
 .collapse {
-  overflow: hidden;
   max-height: 1000px;
   transition: $transition-duration;
   &.collapsed {
